[INFER] Follow values pushed by SETLOCAL in followEscapingArguments, bug 660173.