js/src/jit-test/tests/basic/bug660173.js
@@ -1,0 +1,4 @@
+(function() {}).apply(null, (function() {
+    var x;
+    return (x = arguments);  
+})());
